<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/context_group_song" >
        <item
            android:id="@+id/edit"
            android:title="@string/edit_song">
        </item>
        <item
            android:id="@+id/save_trans"
            android:title="@string/save_trans">
        </item>
        <item
            android:id="@+id/grids_on"
            android:title="@string/grids_on">
        </item>
        <item
            android:id="@+id/grids_off"
            android:title="@string/grids_off">
        </item>
        <item
            android:id="@+id/save_text"
            android:title="@string/save_text">
        </item>
        <item
            android:id="@+id/save_html"
            android:title="@string/save_html">
        </item>
    </group>

</menu>