<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_delete" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" >

    </TextView>

    <CheckBox
        android:id="@+id/deleteFromDisk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_from_disk" />

</LinearLayout>