<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_fields_panel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/search_criteria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />

    <CheckBox
        android:id="@+id/chordie_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/only_chordie"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/keyword_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keywords" />

        <EditText
            android:id="@+id/keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchButtonClicked"
        android:text="@string/search" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="6"
        android:padding="6dp"
        android:text="@string/search_instruction" />

</LinearLayout>