<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools" tools:ignore="OnClick">

    <TextView
        android:id="@+id/simple_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="4dip"
        android:text="@string/pref_tit_encoding"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/def_encoding"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <requestFocus>
            </requestFocus>
        </Spinner>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/pref_sum_encoding" />

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/OKButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="okClicked"
            android:text="@string/ok" >
        </Button>

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelClicked"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>