<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/choose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_set"
        android:textSize="24sp" />

    <!-- Dividing Line -->
    <View
        android:id="@+id/your_image_view_id"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/divider_colour" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/no_sets"
        android:textSize="18sp" />

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>