<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/files_scanned_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="Files scanned:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/songs_found_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:text="Songs Found:"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:ignore="SelectableText" />

        <TextView
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/folder" >
        </TextView>

        <TextView
            android:id="@+id/folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="Folder: "
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/file" >
        </TextView>

        <TextView
            android:id="@+id/file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="File: "
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/start" />

    </LinearLayout>

</FrameLayout>